--- a/arts.html
+++ b/arts.html
@@ -14,6 +14,7 @@
     <script src="./js/pso_vz.js"></script>
     <script src="./js/arts.js" defer></script>
     <script src="./js/coastline.js"></script>
+    <script src="./js/stateMachine.js" defer></script>
     <link rel="stylesheet" href="./css/arts.css">
     <link rel="icon" href="./Media/sallellite_icon.ico">
 </head>
