--- a/arts.html
+++ b/arts.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>ROTS</title>
     <script src="./js/math.min.js"></script>
+    <script src="./js/sgp4_vz_edits.js"></script>
     <script src="./js/astro_vz.js"></script>
     <script src="./js/LZWEncoder.js"></script>
     <script src="./js/NeuQuant.js"></script>
