--- a/arts.html
+++ b/arts.html
@@ -39,6 +39,7 @@
                         <label for="coe-sat-input">COE</label><input onchange="changeSatelliteInputType(this)" type="radio" id="coe-sat-input" name="sat-input-radio">
                         <label for="rmoe-sat-input">RMOE</label><input onchange="changeSatelliteInputType(this)" type="radio" id="rmoe-sat-input" name="sat-input-radio">
                         <label for="geo-sat-input">GEO</label><input onchange="changeSatelliteInputType(this)" type="radio" id="geo-sat-input" name="sat-input-radio">
+                        <label for="tle-sat-input">TLE</label><input onchange="changeSatelliteInputType(this)" type="radio" id="tle-sat-input" name="sat-input-radio">
                     </div>
                     <div class="satellite-input" style="margin: 20px 5px; font-size: 1.25em;"></div>
                     <div class="satellite-input" style="margin: 20px 5px; font-size: 1.25em;">R <input class="sat-input"  style="font-size: 1em; width: 15ch;" type="Number" placeholder="0"> km</div>
